--- a/documentation/sphinx/_templates/index.html
+++ b/documentation/sphinx/_templates/index.html
@@ -3,7 +3,13 @@
 {% block body %}
 
    <h1>Openmolar</h1>
-   <p>This is the official documentation for Openmolar.</p>
+   <p>
+OpenMolar is free (open source) software for dental practice management.<br />
+If you are looking for an overview of the application, detailed instructions on 
+its use, installation or development, you are in the right place.<br />
+Please follow the links below.
+   </p>
+
 
    <h2>Documentation</h2>
        <table class="contentstable" align="center">
@@ -35,7 +41,7 @@
              <a class="biglink" href="{{ pathto('technical/index') }}">
                 Developers' Reference</a><br />
              <span class="linkdescr">
-                Technical information on the design and sources of {{project}}.
+                Technical information on the design of {{project}}.
                 Plus how to contribute or extend it.
              </span></p>
 
@@ -112,7 +118,8 @@
         <!-- trustico -->
         
         <a target="_blank" href="http://www.trustico.co.uk/?seal=rapidssl">
-        <img alt="Secured By RapidSSL and Trustico" title="Secured By RapidSSL and Trustico" 
+        <img alt="Secured By RapidSSL and Trustico" 
+        title="Secured By RapidSSL and Trustico" 
         src="https://secure.trustico.com/rapidssl/rapidssl-115x65.gif" 
         width="115" height="52" style="border:0;" alt="trustico ssl"></a>
     
